clusters/staging/addons/observability/prometheus/prometheus-ingress-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: staging.internal.javiersant.com
    gethomepage.dev/href: "https://prometheus.staging.internal.javiersant.com"
spec:
  routes:
    - match: Host(`prometheus.staging.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: prometheus-stack-kube-prom-prometheus
          port: 9090
